Mejor estetica por Carlos Gabriel y arreglo de bugs repentinos

--- a/templates/inventario/index.html
+++ b/templates/inventario/index.html
@@ -329,6 +329,7 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="{{ url_for('static', filename='inventario/inventario.js') }}"></script>
 <script src="{{ url_for('static', filename='js/inventario/lotes.js') }}"></script>
+<script src="{{ url_for('static', filename='inventario/insumos/index.js') }}"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function() {
         // Inicializar tooltips de Bootstrap
