Mejor estetica por Carlos Gabriel y arreglo de bugs repentinos

--- a/templates/inventario/index.html
+++ b/templates/inventario/index.html
@@ -772,8 +772,8 @@
 <div class="modal fade" id="loteModal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content border-0 shadow-lg">
-            <div class="modal-header" style="background-color: #5bc0de; color: white;">
-                <h5 class="modal-title fs-5 fw-semibold">
+            <div class="modal-header" style="background-color: var(--color-marron-oscuro); color: white;">
+                <h5 class="modal-title fs-5 fw-semibold" style="color: white;">
                     <i class="bi bi-box-seam me-2"></i>Detalles del Lote
                 </h5>
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
